Add NOMAD and fix bug that lost most non-V band data

--- a/collate_data.ipynb
+++ b/collate_data.ipynb
@@ -43,12 +43,17 @@
     "        'R': 'R1mag',\n",
     "        'I': 'Imag',\n",
     "    },\n",
+    "    'I/297/out': {\n",
+    "        'B': 'Bmag',\n",
+    "        'V': 'Vmag',\n",
+    "        'R': 'Rmag',\n",
+    "    },\n",
     "    'VI/135/table15': {\n",
     "        'B': 'BTmag',\n",
     "        'V': 'VTmag',\n",
     "    }\n",
     "}\n",
-    "REPROCESS = False # Set to True to reprocess previous data rather than finding new data"
+    "REPROCESS = True # Set to True to reprocess previous data rather than finding new data"
    ]
   },
   {
@@ -101,12 +106,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78e5da7a5ad949e28856948bde4a598b",
+       "model_id": "1c847c497c1b4b1781ec0faabe91c89c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "New dates:   0%|          | 0/48 [00:00<?, ?it/s]"
+       "New dates:   0%|          | 0/50 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -115,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03ce58171c2f469c83660e9a02a32b8f",
+       "model_id": "f758b6a1bd9c439e9e248defa8fb8348",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8cd567fd7434d7ab7003afc842d5406",
+       "model_id": "927ee0ae5f3e421a9b4c983c2515087e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,7 +148,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c4f753c61af4b33a32122c173abbec2",
+       "model_id": "0dc0dcd7d5144f838f81581c045ed218",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,7 +162,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b1cc527e7364d7b9788ccde474b96c4",
+       "model_id": "6d21a56eefd94cb2afb54d337914bc86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -171,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2eaeb625ca714a0a82e3f48ab7aaecf9",
+       "model_id": "8609a864293949f6a7f159fa4f60da67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -185,7 +190,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41c2e913464244e79c6da22a0a584e16",
+       "model_id": "35907a0a43a4435ea5ea8b028c374b36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +204,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "093f4ccbd18f4938b82e9793736bf53c",
+       "model_id": "ea3e99bdc7f14dbab9aa7a12bdb2b711",
        "version_major": 2,
        "version_minor": 0
       },
@@ -213,7 +218,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f24afc73a163446197696f0791c84f86",
+       "model_id": "dbc22b34d6b84c7585789fa77ada346c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -227,7 +232,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "860933d283334321a41869a2cf76e328",
+       "model_id": "12086c935e9b4396b888856fbd00fb67",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "\\\\stem-linux-homes\\OSL-Telescope\\data\\users\\Pipeline\\COAST\\2021_11_04: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "315ac9a4049e4ceebc507ed76b1e741e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -241,7 +260,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91f68aa5cf6940179a544e0a7012a825",
+       "model_id": "19eda32c494a4218b50e60eecee1d297",
        "version_major": 2,
        "version_minor": 0
       },
@@ -255,7 +274,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5057585a9f940cc8cb52f67045b7de5",
+       "model_id": "f96e702f79114e1fab040c588f468622",
        "version_major": 2,
        "version_minor": 0
       },
@@ -269,7 +288,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbbcbece8fb44cdfac3e892befe2dfde",
+       "model_id": "0d006567a7cb450aa2419e5a798b649d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -283,7 +302,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db709e3c027a4c6fbdc3e8ae7ca4d1c2",
+       "model_id": "2a0042d6ecf1454f9ed6551d5d100724",
        "version_major": 2,
        "version_minor": 0
       },
@@ -297,7 +316,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "316ec48592a04cddbb43cf09baa66647",
+       "model_id": "2bec564596b542ceae5079baee30c922",
        "version_major": 2,
        "version_minor": 0
       },
@@ -311,7 +330,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ddfb894c7a554c0997c28ae3f4a3fa5b",
+       "model_id": "7c58d47559634b928d99daa4cd50582b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -325,7 +344,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6268987d2fbf4573beef7aa9cd0bf05a",
+       "model_id": "ee2712f47e594f448b2578406cc075e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -339,7 +358,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9accbe939264c518f5e325b387b8209",
+       "model_id": "2d0236a5a5bb4830b5b33acea97dce3a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -353,7 +372,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa90e63cc6ca46cb9ce6c83baf5838ef",
+       "model_id": "27735f3e7cc64298858868b8a2b35c64",
        "version_major": 2,
        "version_minor": 0
       },
@@ -367,7 +386,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d90340a444b241899b1fce1a0acb0816",
+       "model_id": "a5688068e92542c08455a8c25afdd6ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -381,7 +400,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f86439fb8b364e2a8a74dd3fcb2687cb",
+       "model_id": "616082fdac5c475fbefce6b7ee76a337",
        "version_major": 2,
        "version_minor": 0
       },
@@ -395,7 +414,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4babac71e94f4034ac9e1778192e48f1",
+       "model_id": "2e7cf36629f14504af93f3a445898265",
        "version_major": 2,
        "version_minor": 0
       },
@@ -409,7 +428,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c84716db7fc84070a085c49ac0426aeb",
+       "model_id": "3539bd00cc884e67bf91270f9d5dd526",
        "version_major": 2,
        "version_minor": 0
       },
@@ -423,7 +442,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9c4bdd1e0324bdebbd1a24545c8e5f1",
+       "model_id": "a3321fd2e92644eb8d21f710db1c90eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -437,7 +456,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff562f8bf52d4114bf796fe85865073e",
+       "model_id": "3f681a6188494fb09a0f8faa30d80ef0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "\\\\stem-linux-homes\\OSL-Telescope\\data\\users\\Pipeline\\PIRATE\\2021_11_04: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "90ec6521d71445bba7edbf199e83c79d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -451,7 +484,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac63e09c191241e6a7776aa68fce247e",
+       "model_id": "33dd997c8468473a98087fe48df1c24c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,7 +498,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a12422c8380e42e6b0accd79ba5d96d6",
+       "model_id": "579ef0bef8bf4e52b354f85ec1fd4fcb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -479,7 +512,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c23b0981aff441bfbbbfe7626fd9eb9e",
+       "model_id": "e73656cb2c724ce4bad49549045b60b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -493,7 +526,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fae63e9dbc242949133cf70a42d6476",
+       "model_id": "e231ee68f6c64fa29c2f1eaf3b9488f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -507,7 +540,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74ccd859240944d5bb31b1b936726b92",
+       "model_id": "edea0b65b8ee49dda47595df3ad39752",
        "version_major": 2,
        "version_minor": 0
       },
@@ -521,7 +554,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d0b04f77049473c9856e8880ac33bee",
+       "model_id": "17ac0233a98a45a39135b0711a49c8ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -535,7 +568,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3bf7c11f2b94306a5e8f612811e6458",
+       "model_id": "308d4a6d7769445694d4cc8ceb5d9292",
        "version_major": 2,
        "version_minor": 0
       },
@@ -549,7 +582,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0feac35b85ca4a43ac0170a097bb943d",
+       "model_id": "2e5c64c264b84b8b8847e06f65e4506e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -563,7 +596,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be63071ec41e449f9413d6248b23e5c5",
+       "model_id": "3567c9805c4249e9b8fdd4264f57b7a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -577,7 +610,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcca9c3bee2c49408a24155310239eb9",
+       "model_id": "e083e8afff824cbe90e6e8c5049720e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -591,7 +624,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40fa17df86c347be98691064f4b1825a",
+       "model_id": "3dc22f0d2adf44f3b30b2f8a7e15e7af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -605,7 +638,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac020251649d4c849f6cae25ca3e077d",
+       "model_id": "1bfdbaeb6d44411cbc16cf9b4ae8c8b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -619,7 +652,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18543bd1e6f847bb8592ffaa246b6039",
+       "model_id": "f410b6273bc048fb934a0d0ba308aaca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -633,7 +666,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf27b610c863460f9e2d9647a1535631",
+       "model_id": "8c86d8916c5748fa82b019d819293762",
        "version_major": 2,
        "version_minor": 0
       },
@@ -647,7 +680,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10d6874f2f9e4ecc9c48a477363fa198",
+       "model_id": "5a1ccddb867847a482fbd8f8e848f485",
        "version_major": 2,
        "version_minor": 0
       },
@@ -661,7 +694,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fabfcd3bd4e647c594683dc1b67513b3",
+       "model_id": "24c9ff4329aa470f9217d13a0fbcf982",
        "version_major": 2,
        "version_minor": 0
       },
@@ -675,7 +708,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7299961c173243e29ab1febedeb627e0",
+       "model_id": "e195582b12cc4afea5b5d0d7f258bc48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -689,7 +722,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0621e662229c4c4887d53fc0c4366301",
+       "model_id": "75ae152cc531477cb6fa12376cdd34e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -703,7 +736,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c21eb257ffa044b89b4f1c681396c069",
+       "model_id": "f5195342fa07458081bf1be31b44e510",
        "version_major": 2,
        "version_minor": 0
       },
@@ -717,7 +750,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef3d49bf586043078a54561736ff06b1",
+       "model_id": "8fbfc1ea24d4437f97019ab167b4f75c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -731,7 +764,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbe59829175a4b088796d2efd5b71e07",
+       "model_id": "c883dfdea1034e369e32e4c057d90c93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -745,7 +778,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b19f91582664f0891f821b0d16e12d6",
+       "model_id": "31fe121ab5bb4a1e8c36537597e97bba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -759,7 +792,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ef3a036285c46339bff78b3f4fa9165",
+       "model_id": "d345b3675b284da29dc6d9fbbf1f4465",
        "version_major": 2,
        "version_minor": 0
       },
@@ -773,7 +806,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab54ce1aaa7c4a469432505dc54c7f6a",
+       "model_id": "45856d28028945a6a50c951d4c95f9cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -832,9 +865,6 @@
     "        target_row = table[0]\n",
     "        out_table = Table(target_row)\n",
     "        \n",
-    "        # Do USNO vizier query for contents of table, then take the closest few matching rows\n",
-    "        # to use for calibration\n",
-    "        \n",
     "        table.rename_column('RA', '_RAJ2000')\n",
     "        table.rename_column('Dec', '_DEJ2000')\n",
     "        \n",
@@ -846,8 +876,6 @@
     "                calibration_catalogue_path = f\"data/calibration_tables/{obs_meta['name']}/{calibration_catalogue.replace('/', '_')}_{catalogue.stem}.ecsv\"\n",
     "                try:\n",
     "                    calibration_table = Table.read(calibration_catalogue_path)\n",
-    "                    calibration_succeeded = True\n",
-    "                    break\n",
     "                except FileNotFoundError:\n",
     "                    table = table[table['FLAGS'] == 0]\n",
     "                    table['flux_diff'] = numpy.abs(table['FLUX_AUTO'] - target_row['FLUX_AUTO'])\n",
@@ -872,7 +900,7 @@
     "\n",
     "                        # To do: Reject any known variables\n",
     "\n",
-    "                        for catalogue_row in catalogue_matches:\n",
+    "                        for catalogue_row in catalogue_matches[~numpy.isnan(catalogue_matches[calibration_catalogue_fields[obs_meta['band']]])]:\n",
     "                            calibration_rows.append(hstack([\n",
     "                                sources[int(catalogue_row['_q']) - 1],\n",
     "                                catalogue_row[[calibration_catalogue_fields[obs_meta['band']]]],\n",
@@ -899,20 +927,21 @@
     "                        numpy.mean(calibrated_mags),\n",
     "                        # Standard error as per https://www.statology.org/standard-error-of-mean-python/\n",
     "                        numpy.std(calibrated_mags, ddof=1) / numpy.sqrt(numpy.size(calibrated_mags)),\n",
+    "                        calibration_catalogue,\n",
     "                    ],\n",
-    "                    names=['calibrated_mag', 'calibrated_mag_err'],\n",
+    "                    names=['calibrated_mag', 'calibrated_mag_err', 'calibration_catalogue'],\n",
     "                )\n",
     "                calibration_succeeded = True\n",
     "                break\n",
     "\n",
     "        if not calibration_succeeded:\n",
-    "            # To do: How to handle the lack of V mags in USNO?\n",
     "            out_table.add_columns(\n",
     "                [\n",
     "                    numpy.nan,\n",
     "                    numpy.nan,\n",
+    "                    '',\n",
     "                ],\n",
-    "                names=['calibrated_mag', 'calibrated_mag_err'],\n",
+    "                names=['calibrated_mag', 'calibrated_mag_err', 'calibration_catalogue'],\n",
     "            )\n",
     "        \n",
     "        for key, val in obs_meta.items():\n",
