--- a/flag_totals.ipynb
+++ b/flag_totals.ipynb
@@ -406,6 +406,8 @@
    ],
    "source": [
     "for table in Path('data').glob('*.ecsv'):\n",
+    "    if table.stem not in TARGETS:\n",
+    "        continue\n",
     "    photometry = Table.read(table)\n",
     "    photometry['flagged'] = (photometry['FLAGS'] & 4) != 0\n",
     "    for telescope, telescope_group in photometry.to_pandas().groupby('telescope'):\n",
