Add calibration config for U band

--- a/collate_data.ipynb
+++ b/collate_data.ipynb
@@ -51,6 +51,11 @@
     "    'VI/135/table15': {\n",
     "        'B': 'BTmag',\n",
     "        'V': 'VTmag',\n",
+    "    },\n",
+    "    'II/339/uvotssc1': {\n",
+    "        'U': 'Umag',\n",
+    "        'B': 'Bmag',\n",
+    "        'V': 'Vmag',\n",
     "    }\n",
     "}\n",
     "REPROCESS = False # Set to True to reprocess previous data rather than finding new data"
