Add default end time of now + 3 weeks

--- a/generate_schedule.ipynb
+++ b/generate_schedule.ipynb
@@ -14,6 +14,7 @@
     "from IPython.display import display\n",
     "\n",
     "import csv\n",
+    "import datetime\n",
     "\n",
     "from targets import TARGETS, ALL_TELESCOPE_FILTERS, ALL_FILTERS"
    ]
@@ -41,7 +42,10 @@
     "BINNING = 1\n",
     "REPEATS = 1\n",
     "MAX_USES = 3\n",
-    "ALT = 20"
+    "ALT = 20\n",
+    "IS_TIMED = 'FALSE'\n",
+    "START_TIME = ''\n",
+    "END_TIME = (datetime.date.today() + datetime.timedelta(days=21)).strftime('%Y.%m.%dT09:00Z')"
    ]
   },
   {
@@ -107,8 +111,8 @@
     "            atoms = ';'.join(atoms)\n",
     "            csv_writer.writerow([\n",
     "                target, coords.ra.to_string(alwayssign=True, sep=':', unit=u.hour),\n",
-    "                coords.dec.to_string(alwayssign=True, sep=':'), 'FALSE', '',\n",
-    "                '', PRIORITY, atoms, BINNING, REPEATS, MAX_USES, ALT,\n",
+    "                coords.dec.to_string(alwayssign=True, sep=':'), IS_TIMED, START_TIME,\n",
+    "                END_TIME, PRIORITY, atoms, BINNING, REPEATS, MAX_USES, ALT,\n",
     "            ])"
    ]
   }
