Allow overriding defaults per tatget

--- a/generate_schedule.ipynb
+++ b/generate_schedule.ipynb
@@ -28,7 +28,8 @@
    "source": [
     "MAX_FLAG_THRESHOLD = 0.25\n",
     "MIN_EXPOSURES = 5\n",
-    "DEFAULT_EXPOSURES = list(range(1, 5)) + list(range(5, 60, 5)) + list(range(60, 600, 60))"
+    "DEFAULT_EXPOSURES = list(range(1, 5)) + list(range(5, 60, 5)) + list(range(60, 600, 60))\n",
+    "DATE_FORMAT = '%Y.%m.%dT09:00Z'"
    ]
   },
   {
@@ -44,8 +45,8 @@
     "MAX_USES = 3\n",
     "ALT = 20\n",
     "IS_TIMED = 'FALSE'\n",
-    "START_TIME = ''\n",
-    "END_TIME = (datetime.date.today() + datetime.timedelta(days=21)).strftime('%Y.%m.%dT09:00Z')"
+    "START_TIME = datetime.date.today()\n",
+    "END_TIME = (datetime.date.today() + datetime.timedelta(days=21))"
    ]
   },
   {
@@ -110,9 +111,18 @@
     "                    atoms.append(f'{f}:{e}')\n",
     "            atoms = ';'.join(atoms)\n",
     "            csv_writer.writerow([\n",
-    "                target, coords.ra.to_string(alwayssign=True, sep=':', unit=u.hour),\n",
-    "                coords.dec.to_string(alwayssign=True, sep=':'), IS_TIMED, START_TIME,\n",
-    "                END_TIME, PRIORITY, atoms, BINNING, REPEATS, MAX_USES, ALT,\n",
+    "                target, \n",
+    "                coords.ra.to_string(alwayssign=True, sep=':', unit=u.hour),\n",
+    "                coords.dec.to_string(alwayssign=True, sep=':'),\n",
+    "                IS_TIMED,\n",
+    "                config.get('start', START_TIME).strftime(DATE_FORMAT),\n",
+    "                config.get('end', END_TIME).strftime(DATE_FORMAT),\n",
+    "                config.get('priority', PRIORITY),\n",
+    "                atoms,\n",
+    "                BINNING,\n",
+    "                config.get('repeats', REPEATS),\n",
+    "                config.get('uses', MAX_USES),\n",
+    "                config.get('alt', ALT),\n",
     "            ])"
    ]
   }
