--- a/generate_schedule.ipynb
+++ b/generate_schedule.ipynb
@@ -29,7 +29,7 @@
     "MAX_FLAG_THRESHOLD = 0.25\n",
     "MIN_EXPOSURES = 5\n",
     "DEFAULT_EXPOSURES = list(range(1, 5)) + list(range(5, 60, 5)) + list(range(60, 600, 60))\n",
-    "DATE_FORMAT = '%Y.%m.%dT09:00Z'"
+    "DATE_FORMAT = '%Y-%m-%dT09:00:00'"
    ]
   },
   {
@@ -45,8 +45,8 @@
     "MAX_USES = 3\n",
     "ALT = 20\n",
     "IS_TIMED = 'FALSE'\n",
-    "START_TIME = datetime.date.today()\n",
-    "END_TIME = (datetime.date.today() + datetime.timedelta(days=21))"
+    "START_TIME = None\n",
+    "END_TIME = datetime.date.today() + datetime.timedelta(days=21)"
    ]
   },
   {
@@ -106,17 +106,34 @@
     "            coords = SkyCoord.from_name(target, parse=True)\n",
     "            atoms = []\n",
     "            for f, es in filters.items():\n",
+    "                if len(es) == 0:\n",
+    "                    continue\n",
     "                for e in {es[0], es[int(len(es)/2)], es[-1]}: \n",
     "                    # Take the unique lowest, middle, and highest exposure times\n",
     "                    atoms.append(f'{f}:{e}')\n",
     "            atoms = ';'.join(atoms)\n",
+    "            if not atoms:\n",
+    "                continue\n",
+    "\n",
+    "            start = config.get('start', START_TIME)\n",
+    "            if start is None:\n",
+    "                start = ''\n",
+    "            else:\n",
+    "                start = start.strftime(DATE_FORMAT)\n",
+    "\n",
+    "            end = config.get('end', END_TIME)\n",
+    "            if end is None:\n",
+    "                end = ''\n",
+    "            else:\n",
+    "                end = end.strftime(DATE_FORMAT)\n",
+    "\n",
     "            csv_writer.writerow([\n",
     "                target, \n",
     "                coords.ra.to_string(alwayssign=True, sep=':', unit=u.hour),\n",
     "                coords.dec.to_string(alwayssign=True, sep=':'),\n",
     "                IS_TIMED,\n",
-    "                config.get('start', START_TIME).strftime(DATE_FORMAT),\n",
-    "                config.get('end', END_TIME).strftime(DATE_FORMAT),\n",
+    "                start,\n",
+    "                end,\n",
     "                config.get('priority', PRIORITY),\n",
     "                atoms,\n",
     "                BINNING,\n",
