Set end date for Hind's Star and Delta Cephei

--- a/generate_schedule.ipynb
+++ b/generate_schedule.ipynb
@@ -125,6 +125,8 @@
     "            if end is None:\n",
     "                end = ''\n",
     "            else:\n",
+    "                if end < datetime.date.today():\n",
+    "                    continue\n",
     "                end = end.strftime(DATE_FORMAT)\n",
     "\n",
     "            csv_writer.writerow([\n",
