Fix failed plots due to masked values

--- a/plot_folded.ipynb
+++ b/plot_folded.ipynb
@@ -12,6 +12,7 @@
     "from astropy import units as u\n",
     "\n",
     "from matplotlib import pyplot\n",
+    "import numpy\n",
     "import seaborn\n",
     "\n",
     "from pathlib import Path\n",
@@ -25,6 +26,27 @@
    "id": "b0ed7c9b-86d8-4849-b776-031188c532d8",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1SWASPJ002552.75+454445.3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/stem/anm83/.conda/envs/pirate-photometry/lib/python3.9/site-packages/matplotlib/cbook/__init__.py:1061: UserWarning: Warning: converting a masked element to nan.\n",
+      "  x = np.asanyarray(x)\n",
+      "/home/stem/anm83/.conda/envs/pirate-photometry/lib/python3.9/site-packages/matplotlib/cbook/__init__.py:1061: UserWarning: Warning: converting a masked element to nan.\n",
+      "  x = np.asanyarray(x)\n",
+      "/home/stem/anm83/.conda/envs/pirate-photometry/lib/python3.9/site-packages/matplotlib/cbook/__init__.py:1061: UserWarning: Warning: converting a masked element to nan.\n",
+      "  x = np.asanyarray(x)\n",
+      "/home/stem/anm83/.conda/envs/pirate-photometry/lib/python3.9/site-packages/matplotlib/cbook/__init__.py:1061: UserWarning: Warning: converting a masked element to nan.\n",
+      "  x = np.asanyarray(x)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -45,6 +67,27 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1SWASPJ002552.88+454558.7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/stem/anm83/.conda/envs/pirate-photometry/lib/python3.9/site-packages/matplotlib/cbook/__init__.py:1061: UserWarning: Warning: converting a masked element to nan.\n",
+      "  x = np.asanyarray(x)\n",
+      "/home/stem/anm83/.conda/envs/pirate-photometry/lib/python3.9/site-packages/matplotlib/cbook/__init__.py:1061: UserWarning: Warning: converting a masked element to nan.\n",
+      "  x = np.asanyarray(x)\n",
+      "/home/stem/anm83/.conda/envs/pirate-photometry/lib/python3.9/site-packages/matplotlib/cbook/__init__.py:1061: UserWarning: Warning: converting a masked element to nan.\n",
+      "  x = np.asanyarray(x)\n",
+      "/home/stem/anm83/.conda/envs/pirate-photometry/lib/python3.9/site-packages/matplotlib/cbook/__init__.py:1061: UserWarning: Warning: converting a masked element to nan.\n",
+      "  x = np.asanyarray(x)\n"
+     ]
     },
     {
      "data": {
@@ -68,6 +111,13 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1SWASPJ184559.85+471858.4\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "<Figure size 432x288 with 0 Axes>"
@@ -87,6 +137,27 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1SWASPJ002551.12+454523.8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/stem/anm83/.conda/envs/pirate-photometry/lib/python3.9/site-packages/matplotlib/cbook/__init__.py:1061: UserWarning: Warning: converting a masked element to nan.\n",
+      "  x = np.asanyarray(x)\n",
+      "/home/stem/anm83/.conda/envs/pirate-photometry/lib/python3.9/site-packages/matplotlib/cbook/__init__.py:1061: UserWarning: Warning: converting a masked element to nan.\n",
+      "  x = np.asanyarray(x)\n",
+      "/home/stem/anm83/.conda/envs/pirate-photometry/lib/python3.9/site-packages/matplotlib/cbook/__init__.py:1061: UserWarning: Warning: converting a masked element to nan.\n",
+      "  x = np.asanyarray(x)\n",
+      "/home/stem/anm83/.conda/envs/pirate-photometry/lib/python3.9/site-packages/matplotlib/cbook/__init__.py:1061: UserWarning: Warning: converting a masked element to nan.\n",
+      "  x = np.asanyarray(x)\n"
+     ]
     },
     {
      "data": {
@@ -117,6 +188,7 @@
     "    target_config = TARGETS[table.stem]\n",
     "    if 'expected_periods' not in target_config:\n",
     "        continue\n",
+    "    print(table.stem)\n",
     "    timeseries = TimeSeries.read(table, time_column='timestamp', time_format='jd')\n",
     "    timeseries = timeseries[timeseries['FLAGS'] == 0]\n",
     "    for period in target_config['expected_periods']:\n",
@@ -137,6 +209,7 @@
     "        )\n",
     "        for band, ax in mag.axes_dict.items():\n",
     "            band_data = folded[folded['band'] == band]\n",
+    "            band_data['calibrated magnitude'].fill_value = numpy.nan\n",
     "            ax.errorbar(\n",
     "                band_data.time.jd,\n",
     "                band_data['calibrated magnitude'],\n",
